Add pre-recorded audio for character voiceovers, use TTS for ฃ and ฅ

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>บิงโกภาษาไทย</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎯</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Thai:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="audio.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -419,86 +420,6 @@ const VOWELS = [
     'ใ-', 'ไ-', '-ำ', 'เ-า'
 ];
 
-// ============================================================
-// SPEECH-TO-CHARACTER MAPPING
-// Each entry: [character, [...spoken forms]]
-// ============================================================
-const CONSONANT_SPEECH = [
-    ['ก', ['กอไก่','กอ ไก่','ก ไก่','ไก่','กอ']],
-    ['ข', ['ขอไข่','ขอ ไข่','ข ไข่','ไข่','ขอ']],
-    ['ฃ', ['ขอขวด','ขอ ขวด','ฃ ขวด','ขวด']],
-    ['ค', ['คอควาย','คอ ควาย','ค ควาย','ควาย','คอ']],
-    ['ฅ', ['คอคน','คอ คน','ฅ คน']],
-    ['ฆ', ['คอระฆัง','คอ ระฆัง','ฆ ระฆัง','ระฆัง']],
-    ['ง', ['งองู','งอ งู','ง งู','งู','งอ']],
-    ['จ', ['จอจาน','จอ จาน','จ จาน','จาน','จอ']],
-    ['ฉ', ['ฉอฉิ่ง','ฉอ ฉิ่ง','ฉ ฉิ่ง','ฉิ่ง','ฉอ']],
-    ['ช', ['ชอช้าง','ชอ ช้าง','ช ช้าง','ช้าง','ชอ']],
-    ['ซ', ['ซอโซ่','ซอ โซ่','ซ โซ่','โซ่','ซอ']],
-    ['ฌ', ['ฌอเฌอ','ฌอ เฌอ','เฌอ']],
-    ['ญ', ['ยอหญิง','ยอ หญิง','ญ หญิง','หญิง']],
-    ['ฎ', ['ดอชฎา','ดอ ชฎา','ฎ ชฎา','ชฎา']],
-    ['ฏ', ['ตอปฏัก','ตอ ปฏัก','ฏ ปฏัก','ปฏัก']],
-    ['ฐ', ['ฐอฐาน','ฐอ ฐาน','ฐ ฐาน','ฐาน']],
-    ['ฑ', ['ทอมณโฑ','ทอ มณโฑ','ฑ มณโฑ','มณโฑ']],
-    ['ฒ', ['ทอผู้เฒ่า','ทอ ผู้เฒ่า','ผู้เฒ่า']],
-    ['ณ', ['นอเณร','นอ เณร','ณ เณร','เณร']],
-    ['ด', ['ดอเด็ก','ดอ เด็ก','ด เด็ก','เด็ก','ดอ']],
-    ['ต', ['ตอเต่า','ตอ เต่า','ต เต่า','เต่า','ตอ']],
-    ['ถ', ['ถอถุง','ถอ ถุง','ถ ถุง','ถุง','ถอ']],
-    ['ท', ['ทอทหาร','ทอ ทหาร','ท ทหาร','ทหาร','ทอ']],
-    ['ธ', ['ทอธง','ทอ ธง','ธ ธง','ธง']],
-    ['น', ['นอหนู','นอ หนู','น หนู','หนู','นอ']],
-    ['บ', ['บอใบไม้','บอ ใบไม้','บ ใบไม้','ใบไม้','บอ']],
-    ['ป', ['ปอปลา','ปอ ปลา','ป ปลา','ปลา','ปอ']],
-    ['ผ', ['ผอผึ้ง','ผอ ผึ้ง','ผ ผึ้ง','ผึ้ง','ผอ']],
-    ['ฝ', ['ฝอฝา','ฝอ ฝา','ฝ ฝา','ฝา','ฝอ']],
-    ['พ', ['พอพาน','พอ พาน','พ พาน','พาน','พอ']],
-    ['ฟ', ['ฟอฟัน','ฟอ ฟัน','ฟ ฟัน','ฟัน','ฟอ']],
-    ['ภ', ['พอสำเภา','พอ สำเภา','ภ สำเภา','สำเภา']],
-    ['ม', ['มอม้า','มอ ม้า','ม ม้า','ม้า','มอ']],
-    ['ย', ['ยอยักษ์','ยอ ยักษ์','ย ยักษ์','ยักษ์','ยอ']],
-    ['ร', ['รอเรือ','รอ เรือ','ร เรือ','เรือ','รอ']],
-    ['ล', ['ลอลิง','ลอ ลิง','ล ลิง','ลิง','ลอ']],
-    ['ว', ['วอแหวน','วอ แหวน','ว แหวน','แหวน','วอ']],
-    ['ศ', ['ศอศาลา','ศอ ศาลา','ศ ศาลา','ศาลา']],
-    ['ษ', ['ษอฤๅษี','ษอ ฤๅษี','ษ ฤๅษี','ฤๅษี']],
-    ['ส', ['สอเสือ','สอ เสือ','ส เสือ','เสือ','สอ']],
-    ['ห', ['หอหีบ','หอ หีบ','ห หีบ','หีบ','หอ']],
-    ['ฬ', ['ลอจุฬา','ลอ จุฬา','ฬ จุฬา','จุฬา']],
-    ['อ', ['อออ่าง','ออ อ่าง','อ อ่าง','อ่าง','ออ']],
-    ['ฮ', ['ฮอนกฮูก','ฮอ นกฮูก','ฮ นกฮูก','นกฮูก','ฮอ']],
-];
-
-const VOWEL_SPEECH = [
-    ['-ะ',   ['สระอะ','สระ อะ','อะ']],
-    ['-า',   ['สระอา','สระ อา','อา']],
-    ['-ิ',   ['สระอิ','สระ อิ','อิ']],
-    ['-ี',   ['สระอี','สระ อี','อี']],
-    ['-ึ',   ['สระอึ','สระ อึ','อึ']],
-    ['-ื',   ['สระอือ','สระ อือ','อือ']],
-    ['-ุ',   ['สระอุ','สระ อุ','อุ']],
-    ['-ู',   ['สระอู','สระ อู','อู']],
-    ['เ-',   ['สระเอ','สระ เอ','เอ']],
-    ['เ-ะ',  ['สระเอะ','สระ เอะ','เอะ']],
-    ['แ-',   ['สระแอ','สระ แอ','แอ']],
-    ['แ-ะ',  ['สระแอะ','สระ แอะ','แอะ']],
-    ['โ-',   ['สระโอ','สระ โอ','โอ']],
-    ['โ-ะ',  ['สระโอะ','สระ โอะ','โอะ']],
-    ['เ-าะ', ['สระเอาะ','สระ เอาะ','เอาะ']],
-    ['-อ',   ['สระออ','สระ ออ','ออ']],
-    ['เ-อ',  ['สระเออ','สระ เออ','เออ']],
-    ['เ-ีย', ['สระเอีย','สระ เอีย','เอีย']],
-    ['เ-ือ', ['สระเอือ','สระ เอือ','เอือ']],
-    ['-ัว',  ['สระอัว','สระ อัว','อัว']],
-    ['ใ-',   ['สระใอไม้ม้วน','สระ ใอไม้ม้วน','ใอไม้ม้วน','ไม้ม้วน']],
-    ['ไ-',   ['สระไอไม้มลาย','สระ ไอไม้มลาย','ไอไม้มลาย','ไม้มลาย']],
-    ['-ำ',   ['สระอำ','สระ อำ','อำ']],
-    ['เ-า',  ['สระเอา','สระ เอา','เอา']],
-];
-
-const ALL_SPEECH = [...CONSONANT_SPEECH, ...VOWEL_SPEECH];
-
 const PLAYER_COLORS = ['#4361ee', '#e84393', '#00b894', '#f39c12'];
 const GAME_POOL_SIZES = { consonants: 35, vowels: 24, mixed: 42 };
 
@@ -638,23 +559,67 @@ function shuffle(arr) {
 function isVowel(ch) { return VOWELS.includes(ch); }
 
 // ============================================================
-// TTS & RANDOMIZE
+// AUDIO PLAYBACK (pre-recorded native speaker from thai-alphabet.com)
 // ============================================================
-function getCharSpokenName(char) {
-    for (const [ch, keywords] of ALL_SPEECH) {
-        if (ch === char) return keywords[1] || keywords[0];
-    }
-    return char;
-}
+const CHAR_AUDIO_KEY = {
+    'ก': 'consonant-ko-kai', 'ข': 'consonant-kho-khay',
+    'ค': 'consonant-kho-khwai', 'ฆ': 'consonant-kho-rakhang',
+    'ง': 'consonant-ngo-ngu', 'จ': 'consonant-jo-jan',
+    'ฉ': 'consonant-cho-ching', 'ช': 'consonant-cho-chang',
+    'ซ': 'consonant-so-so', 'ฌ': 'consonant-cho-cho',
+    'ญ': 'consonant-yo-ying', 'ฎ': 'consonant-do-chada',
+    'ฏ': 'consonant-to-patak', 'ฐ': 'consonant-tho-than',
+    'ฑ': 'consonant-tho-montho', 'ฒ': 'consonant-tho-phuthau',
+    'ณ': 'consonant-no-nen', 'ด': 'consonant-do-dek',
+    'ต': 'consonant-to-tau', 'ถ': 'consonant-tho-thung',
+    'ท': 'consonant-tho-thahan', 'ธ': 'consonant-tho-thong',
+    'น': 'consonant-no-nu', 'บ': 'consonant-bo-baimai',
+    'ป': 'consonant-po-pla', 'ผ': 'consonant-pho-phing',
+    'ฝ': 'consonant-fo-fa', 'พ': 'consonant-pho-phan',
+    'ฟ': 'consonant-fo-fan', 'ภ': 'consonant-pho-samphau',
+    'ม': 'consonant-mo-ma', 'ย': 'consonant-yo-yak',
+    'ร': 'consonant-ro-ria', 'ล': 'consonant-lo-ling',
+    'ว': 'consonant-wo-weng', 'ศ': 'consonant-so-sala',
+    'ษ': 'consonant-so-risi', 'ส': 'consonant-so-sia',
+    'ห': 'consonant-ho-hip', 'ฬ': 'consonant-lo-jula',
+    'อ': 'consonant-o-ang', 'ฮ': 'consonant-ho-nokhu',
+    '-ะ': 'sara-a-short', '-า': 'sara-a-long',
+    '-ิ': 'sara-i-short', '-ี': 'sara-i-long',
+    '-ึ': 'sara-uh-short', '-ื': 'sara-uh-long',
+    '-ุ': 'sara-u-short', '-ู': 'sara-u-long',
+    'เ-': 'sara-e-long', 'เ-ะ': 'sara-e-short',
+    'แ-': 'sara-ae-long', 'แ-ะ': 'sara-ae-short',
+    'โ-': 'sara-o-long', 'โ-ะ': 'sara-o-short',
+    'เ-าะ': 'sara-aw-short', '-อ': 'sara-aw-long',
+    'เ-อ': 'sara-eu-long', 'เ-ีย': 'sara-ia-long',
+    'เ-ือ': 'sara-eua-long', '-ัว': 'sara-ua-long',
+    'ใ-': 'sara-ay-may-muan', 'ไ-': 'sara-ay-may-malay',
+    '-ำ': 'sara-am', 'เ-า': 'sara-au',
+};
+
+let charVoiceover = null;
+
+const CHAR_TTS = {
+    'ฃ': 'ขอ ฃวด',
+    'ฅ': 'คอ คน',
+};
 
 function speakChar(char) {
-    speechSynthesis.cancel();
-    let text = getCharSpokenName(char);
-    text = text.replace(/สระ/g, 'สะหระ');
-    const utter = new SpeechSynthesisUtterance(text);
-    utter.lang = 'th-TH';
-    utter.rate = 0.9;
-    speechSynthesis.speak(utter);
+    if (charVoiceover) {
+        charVoiceover.pause();
+        charVoiceover.currentTime = 0;
+    }
+    window.speechSynthesis.cancel();
+    const key = CHAR_AUDIO_KEY[char];
+    if (key && typeof AUDIO_DATA !== 'undefined' && AUDIO_DATA.has(key)) {
+        charVoiceover = new Audio('data:audio/mpeg;base64,' + AUDIO_DATA.get(key));
+        charVoiceover.play();
+    } else if (CHAR_TTS[char]) {
+        const utt = new SpeechSynthesisUtterance(CHAR_TTS[char]);
+        utt.lang = 'th-TH';
+        utt.rate = 0.85;
+        window.speechSynthesis.speak(utt);
+    }
 }
 
 function randomizeChar() {
@@ -691,7 +656,7 @@ function replayChar() {
 
 function revealChar() {
     if (!state.pendingChar) return;
-    speechSynthesis.cancel();
+    if (charVoiceover) { charVoiceover.pause(); charVoiceover.currentTime = 0; }
     const char = state.pendingChar;
     state.pendingChar = null;
     document.getElementById('reveal-btn').classList.add('hidden');
@@ -1039,7 +1004,7 @@ function highlightWinLine(pi, line) {
 function showWin(pi) {
     sfxWin();
     state.gameActive = false;
-    speechSynthesis.cancel();
+    if (charVoiceover) { charVoiceover.pause(); charVoiceover.currentTime = 0; }
     document.getElementById('winner-name').textContent = state.players[pi];
     document.getElementById('win-overlay').classList.remove('hidden');
     startConfetti();
@@ -1053,14 +1018,14 @@ function continueAfterWin() {
 
 function resetGame() {
     stopConfetti();
-    speechSynthesis.cancel();
+    if (charVoiceover) { charVoiceover.pause(); charVoiceover.currentTime = 0; }
     document.getElementById('win-overlay').classList.add('hidden');
     startGame();
 }
 
 function backToSetup() {
     stopConfetti();
-    speechSynthesis.cancel();
+    if (charVoiceover) { charVoiceover.pause(); charVoiceover.currentTime = 0; }
     document.getElementById('win-overlay').classList.add('hidden');
     document.getElementById('game-screen').classList.add('hidden');
     document.getElementById('setup-screen').classList.remove('hidden');
