Fix online new game resetting player names
resetGame() was calling local-only startGame() in online mode, which read
names from nonexistent DOM inputs and fell back to defaults. Now sends a
start message to the server instead, which regenerates boards and broadcasts
the real player names. Also allows handleStart() during "playing" phase so
the moderator can restart mid-game.

--- a/index.html
+++ b/index.html
@@ -1499,6 +1499,12 @@ function resetGame() {
     stopConfetti();
     if (charVoiceover) { charVoiceover.pause(); charVoiceover.currentTime = 0; }
     document.getElementById('win-overlay').classList.add('hidden');
+    if (state.gameType === 'online') {
+        if (state.role === 'moderator') {
+            wsSend({ type: 'start', moderatorPlaying: state.moderatorPlaying });
+        }
+        return;
+    }
     startGame();
 }
 
